Update Practise : module commands practise